Criacao do cupom

--- a/Mongo/Mongo.Web/Views/Cupom/CupomIndex.cshtml
+++ b/Mongo/Mongo.Web/Views/Cupom/CupomIndex.cshtml
@@ -11,7 +11,7 @@
             <div class="col-6">
                 <div class="col-6 text-end">
 			</div>
-				<a asp-action="CouponCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
+				<a asp-action="CupomCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
 
 			</div>
 		</div>
@@ -43,7 +43,7 @@
 							@((item.MinAmount).ToString("c"))
 					</td>
 					<td>
-							<a asp-action="CouponDelete" asp-route-couponId="@item.Id" class="btn btn-danger">
+							<a asp-action="CupomDelete" asp-route-couponId="@item.Id" class="btn btn-danger">
 							<i class="bi bi-trash"></i>
 						</a>
 					</td>
